// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UsePromptForm rendering tests fields empty - test 1`] = `
<div>
  <form
    class="flex min-h-0 flex-1 flex-col"
    data-testid="use-prompt-form"
  >
    <div
      class="flex min-h-0 flex-1 flex-col gap-3 px-6 lg:min-h-[40vh]"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-sm font-medium"
        >
          Vorschau
        </span>
        <div
          class="h-px flex-1 bg-border"
        />
      </div>
      <div
        class="group relative flex min-h-0 flex-1 flex-col overflow-hidden rounded-md border bg-muted/50"
        data-testid="prompt-preview"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-preview-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          class="flex-1 overflow-y-auto p-4"
        >
          <div
            class="leading-relaxed text-foreground/85"
            data-testid="preview"
          >
            <div
              class="text-slate-700 leading-relaxed"
              data-testid="react-md"
            >
              <div
                data-testid="react-markdown-mock"
              >
                content 1
              </div>
            </div>
          </div>
        </div>
        <div
          class="shrink-0 border-t px-4 py-2.5"
        >
          <p
            class="text-xs text-muted-foreground"
          >
            <span
              class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
            >
              {{platzhalter}}
            </span>
            noch nicht ausgefüllt ·
             
            <span
              class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
            >
              wert
            </span>
            ausgefüllt
          </p>
        </div>
      </div>
    </div>
    <div
      class="relative flex shrink-0 items-center justify-between gap-2 bg-background px-6 py-4"
    >
      <div
        class="pointer-events-none absolute inset-x-0 -top-8 h-8"
        style="background: linear-gradient(to bottom, transparent, hsl(var(--background)));"
      />
      <span />
      <div
        class="flex items-center gap-2"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-prompt-btn"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span>
            Kopieren
          </span>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            data-slot="dropdown-menu-trigger"
            data-testid="open-in-ai-btn"
            type="button"
          >
            In KI öffnen
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`UsePromptForm rendering tests multiple fields - required false - test 1`] = `
<div>
  <form
    class="flex min-h-0 flex-1 flex-col"
    data-testid="use-prompt-form"
  >
    <div
      class="grid min-h-0 flex-1 grid-cols-1 gap-y-5 px-6 lg:min-h-[40vh] lg:grid-cols-2"
    >
      <div
        class="flex min-h-0 flex-col gap-3 lg:pr-2"
      >
        <span
          class="text-sm font-medium"
        >
          Platzhalter ausfüllen
        </span>
        <div
          class="min-h-0 flex-1 overflow-y-auto rounded-md border p-4"
        >
          <div
            class="space-y-4"
            data-testid="prompt-variables-form"
          >
            <div>
              <div
                data-slot="form-item"
                data-testid="name"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_2_-form-item"
                >
                  Name
                </label>
                <input
                  aria-describedby="_r_2_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_2_-form-item"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="email"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_3_-form-item"
                >
                  Email Address
                </label>
                <input
                  aria-describedby="_r_3_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_3_-form-item"
                  name="email"
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="age"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_4_-form-item"
                >
                  Age
                </label>
                <input
                  aria-describedby="_r_4_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_4_-form-item"
                  name="age"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="birthdate"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_5_-form-item"
                >
                  Birth Date
                </label>
                <input
                  aria-describedby="_r_5_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_5_-form-item"
                  name="birthdate"
                  type="date"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="bio"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_6_-form-item"
                >
                  Biography
                </label>
                <textarea
                  aria-describedby="_r_6_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="textarea"
                  id="_r_6_-form-item"
                  name="bio"
                  rows="4"
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="newsletter"
              >
                <div
                  class="relative flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    aria-describedby="_r_7_-form-item-description"
                    aria-invalid="false"
                    data-slot="form-control"
                    data-state="unchecked"
                    id="_r_7_-form-item"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <input
                    aria-hidden="true"
                    name="newsletter"
                    style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
                    tabindex="-1"
                    type="checkbox"
                    value="on"
                  />
                  <label
                    data-error="false"
                    data-slot="form-label"
                    for="_r_7_-form-item"
                  >
                    Newsletter
                  </label>
                </div>
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="gender"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_8_-form-item"
                >
                  Gender
                </label>
                <div
                  aria-describedby="_r_8_-form-item-description"
                  aria-invalid="false"
                  aria-required="false"
                  class=""
                  data-slot="form-control"
                  dir="ltr"
                  id="_r_8_-form-item"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <button
                      aria-checked="false"
                      class=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="gender-Male"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="Male"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <span
                          class="relative flex items-center justify-center"
                          data-slot="radio-group-indicator"
                          data-state="unchecked"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                    <input
                      aria-hidden="true"
                      style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                      tabindex="-1"
                      type="radio"
                      value="Male"
                    />
                    <label
                      data-slot="label"
                      for="gender-Male"
                    >
                      Male
                    </label>
                  </div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <button
                      aria-checked="false"
                      class=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="gender-Female"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="Female"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <span
                          class="relative flex items-center justify-center"
                          data-slot="radio-group-indicator"
                          data-state="unchecked"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                    <input
                      aria-hidden="true"
                      style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                      tabindex="-1"
                      type="radio"
                      value="Female"
                    />
                    <label
                      data-slot="label"
                      for="gender-Female"
                    >
                      Female
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="country"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_b_-form-item"
                >
                  Country
                </label>
                <div
                  class="relative"
                >
                  <button
                    aria-autocomplete="none"
                    aria-controls="radix-_r_c_"
                    aria-expanded="false"
                    class=""
                    data-placeholder=""
                    data-size="default"
                    data-slot="select-trigger"
                    data-state="closed"
                    data-testid="country-trigger"
                    dir="ltr"
                    role="combobox"
                    type="button"
                  >
                    <span
                      data-slot="select-value"
                      style="pointer-events: none;"
                    >
                      Auswählen...
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down size-4 opacity-50"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                  <div
                    data-testid="mock-react-portal"
                  />
                  <select
                    aria-hidden="true"
                    name="country"
                    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                    tabindex="-1"
                  >
                    <option
                      value="CZ"
                    >
                      CZ
                    </option>
                    <option
                      value="RU"
                    >
                      RU
                    </option>
                    <option
                      value="Germany"
                    >
                      Germany
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 flex-col gap-3 lg:pl-2"
      >
        <span
          class="text-sm font-medium"
        >
          Vorschau
        </span>
        <div
          class="group relative flex min-h-0 flex-1 flex-col overflow-hidden rounded-md border bg-muted/50"
          data-testid="prompt-preview"
        >
          <button
            data-slot="tooltip-trigger"
            data-testid="copy-preview-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy"
              data-testid="copy-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </button>
          <div
            data-slot="tooltip-content"
            data-testid="mock-tooltip-content"
            sideoffset="0"
          >
            In Zwischenablage kopieren
          </div>
          <div
            class="flex-1 overflow-y-auto p-4"
          >
            <div
              class="leading-relaxed text-foreground/85"
              data-testid="preview"
            >
              <div
                class="text-slate-700 leading-relaxed"
                data-testid="react-md"
              >
                <div
                  data-testid="react-markdown-mock"
                >
                  content 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="shrink-0 border-t px-4 py-2.5"
          >
            <p
              class="text-xs text-muted-foreground"
            >
              <span
                class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
              >
                {{platzhalter}}
              </span>
              noch nicht ausgefüllt ·
               
              <span
                class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
              >
                wert
              </span>
              ausgefüllt
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex shrink-0 items-center justify-between gap-2 bg-background px-6 py-4"
    >
      <div
        class="pointer-events-none absolute inset-x-0 -top-8 h-8"
        style="background: linear-gradient(to bottom, transparent, hsl(var(--background)));"
      />
      <span />
      <div
        class="flex items-center gap-2"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-prompt-btn"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span>
            Kopieren
          </span>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            data-slot="dropdown-menu-trigger"
            data-testid="open-in-ai-btn"
            type="button"
          >
            In KI öffnen
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`UsePromptForm rendering tests multiple fields - required true - test 1`] = `
<div>
  <form
    class="flex min-h-0 flex-1 flex-col"
    data-testid="use-prompt-form"
  >
    <div
      class="grid min-h-0 flex-1 grid-cols-1 gap-y-5 px-6 lg:min-h-[40vh] lg:grid-cols-2"
    >
      <div
        class="flex min-h-0 flex-col gap-3 lg:pr-2"
      >
        <span
          class="text-sm font-medium"
        >
          Platzhalter ausfüllen
        </span>
        <div
          class="min-h-0 flex-1 overflow-y-auto rounded-md border p-4"
        >
          <div
            class="space-y-4"
            data-testid="prompt-variables-form"
          >
            <div>
              <div
                data-slot="form-item"
                data-testid="name"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_h_-form-item"
                >
                  Name
                  <span
                    class="text-destructive"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-describedby="_r_h_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_h_-form-item"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="email"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_i_-form-item"
                >
                  Email Address
                  <span
                    class="text-destructive"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-describedby="_r_i_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_i_-form-item"
                  name="email"
                  type="email"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="age"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_j_-form-item"
                >
                  Age
                </label>
                <input
                  aria-describedby="_r_j_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_j_-form-item"
                  name="age"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="birthdate"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_k_-form-item"
                >
                  Birth Date
                </label>
                <input
                  aria-describedby="_r_k_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_k_-form-item"
                  name="birthdate"
                  type="date"
                  value=""
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="bio"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_l_-form-item"
                >
                  Biography
                </label>
                <textarea
                  aria-describedby="_r_l_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="textarea"
                  id="_r_l_-form-item"
                  name="bio"
                  rows="4"
                />
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="newsletter"
              >
                <div
                  class="relative flex items-center space-x-2"
                >
                  <button
                    aria-checked="false"
                    aria-describedby="_r_m_-form-item-description"
                    aria-invalid="false"
                    data-slot="form-control"
                    data-state="unchecked"
                    id="_r_m_-form-item"
                    role="checkbox"
                    type="button"
                    value="on"
                  >
                    <div
                      data-testid="mock-react-presence"
                    >
                      <span
                        class="grid place-content-center text-current transition-none"
                        data-slot="checkbox-indicator"
                        data-state="unchecked"
                        style="pointer-events: none;"
                      >
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-check size-3.5"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M20 6 9 17l-5-5"
                          />
                        </svg>
                      </span>
                    </div>
                  </button>
                  <input
                    aria-hidden="true"
                    name="newsletter"
                    style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
                    tabindex="-1"
                    type="checkbox"
                    value="on"
                  />
                  <label
                    data-error="false"
                    data-slot="form-label"
                    for="_r_m_-form-item"
                  >
                    Newsletter
                  </label>
                </div>
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="gender"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_n_-form-item"
                >
                  Gender
                  <span
                    class="text-destructive"
                  >
                    *
                  </span>
                </label>
                <div
                  aria-describedby="_r_n_-form-item-description"
                  aria-invalid="false"
                  aria-required="false"
                  class=""
                  data-slot="form-control"
                  dir="ltr"
                  id="_r_n_-form-item"
                  role="radiogroup"
                  style="outline: none;"
                  tabindex="0"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    <button
                      aria-checked="false"
                      class=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="gender-Male"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="Male"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <span
                          class="relative flex items-center justify-center"
                          data-slot="radio-group-indicator"
                          data-state="unchecked"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                    <input
                      aria-hidden="true"
                      style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                      tabindex="-1"
                      type="radio"
                      value="Male"
                    />
                    <label
                      data-slot="label"
                      for="gender-Male"
                    >
                      Male
                    </label>
                  </div>
                  <div
                    class="flex items-center space-x-2"
                  >
                    <button
                      aria-checked="false"
                      class=""
                      data-radix-collection-item=""
                      data-slot="radio-group-item"
                      data-state="unchecked"
                      id="gender-Female"
                      role="radio"
                      tabindex="-1"
                      type="button"
                      value="Female"
                    >
                      <div
                        data-testid="mock-react-presence"
                      >
                        <span
                          class="relative flex items-center justify-center"
                          data-slot="radio-group-indicator"
                          data-state="unchecked"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle absolute top-1/2 left-1/2 size-2 -translate-x-1/2 -translate-y-1/2 fill-primary"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                          </svg>
                        </span>
                      </div>
                    </button>
                    <input
                      aria-hidden="true"
                      style="transform: translateX(-100%); position: absolute; pointer-events: none; opacity: 0; margin: 0px; width: 0px; height: 0px;"
                      tabindex="-1"
                      type="radio"
                      value="Female"
                    />
                    <label
                      data-slot="label"
                      for="gender-Female"
                    >
                      Female
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div>
              <div
                data-slot="form-item"
                data-testid="country"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_q_-form-item"
                >
                  Country
                </label>
                <div
                  class="relative"
                >
                  <button
                    aria-autocomplete="none"
                    aria-controls="radix-_r_r_"
                    aria-expanded="false"
                    class=""
                    data-placeholder=""
                    data-size="default"
                    data-slot="select-trigger"
                    data-state="closed"
                    data-testid="country-trigger"
                    dir="ltr"
                    role="combobox"
                    type="button"
                  >
                    <span
                      data-slot="select-value"
                      style="pointer-events: none;"
                    >
                      Auswählen...
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down size-4 opacity-50"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                  <div
                    data-testid="mock-react-portal"
                  />
                  <select
                    aria-hidden="true"
                    name="country"
                    style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
                    tabindex="-1"
                  >
                    <option
                      value="CZ"
                    >
                      CZ
                    </option>
                    <option
                      value="RU"
                    >
                      RU
                    </option>
                    <option
                      value="Germany"
                    >
                      Germany
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 flex-col gap-3 lg:pl-2"
      >
        <span
          class="text-sm font-medium"
        >
          Vorschau
        </span>
        <div
          class="group relative flex min-h-0 flex-1 flex-col overflow-hidden rounded-md border bg-muted/50"
          data-testid="prompt-preview"
        >
          <button
            data-slot="tooltip-trigger"
            data-testid="copy-preview-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy"
              data-testid="copy-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </button>
          <div
            data-slot="tooltip-content"
            data-testid="mock-tooltip-content"
            sideoffset="0"
          >
            In Zwischenablage kopieren
          </div>
          <div
            class="flex-1 overflow-y-auto p-4"
          >
            <div
              class="leading-relaxed text-foreground/85"
              data-testid="preview"
            >
              <div
                class="text-slate-700 leading-relaxed"
                data-testid="react-md"
              >
                <div
                  data-testid="react-markdown-mock"
                >
                  content 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="shrink-0 border-t px-4 py-2.5"
          >
            <p
              class="text-xs text-muted-foreground"
            >
              <span
                class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
              >
                {{platzhalter}}
              </span>
              noch nicht ausgefüllt ·
               
              <span
                class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
              >
                wert
              </span>
              ausgefüllt
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex shrink-0 items-center justify-between gap-2 bg-background px-6 py-4"
    >
      <div
        class="pointer-events-none absolute inset-x-0 -top-8 h-8"
        style="background: linear-gradient(to bottom, transparent, hsl(var(--background)));"
      />
      <p
        class="text-xs text-muted-foreground"
        data-testid="required-fields-progress"
      >
        0
         von 
        3
         
        Pflichtplatzhalter
        n
         ausgefüllt
      </p>
      <div
        class="flex items-center gap-2"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-prompt-btn"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span>
            Kopieren
          </span>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            data-slot="dropdown-menu-trigger"
            data-testid="open-in-ai-btn"
            type="button"
          >
            In KI öffnen
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`UsePromptForm rendering tests one field - required false - test 1`] = `
<div>
  <form
    class="flex min-h-0 flex-1 flex-col"
    data-testid="use-prompt-form"
  >
    <div
      class="grid min-h-0 flex-1 grid-cols-1 gap-y-5 px-6 lg:min-h-[40vh] lg:grid-cols-2"
    >
      <div
        class="flex min-h-0 flex-col gap-3 lg:pr-2"
      >
        <span
          class="text-sm font-medium"
        >
          Platzhalter ausfüllen
        </span>
        <div
          class="min-h-0 flex-1 overflow-y-auto rounded-md border p-4"
        >
          <div
            class="space-y-4"
            data-testid="prompt-variables-form"
          >
            <div>
              <div
                data-slot="form-item"
                data-testid="name"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_0_-form-item"
                >
                  Name
                </label>
                <input
                  aria-describedby="_r_0_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_0_-form-item"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 flex-col gap-3 lg:pl-2"
      >
        <span
          class="text-sm font-medium"
        >
          Vorschau
        </span>
        <div
          class="group relative flex min-h-0 flex-1 flex-col overflow-hidden rounded-md border bg-muted/50"
          data-testid="prompt-preview"
        >
          <button
            data-slot="tooltip-trigger"
            data-testid="copy-preview-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy"
              data-testid="copy-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </button>
          <div
            data-slot="tooltip-content"
            data-testid="mock-tooltip-content"
            sideoffset="0"
          >
            In Zwischenablage kopieren
          </div>
          <div
            class="flex-1 overflow-y-auto p-4"
          >
            <div
              class="leading-relaxed text-foreground/85"
              data-testid="preview"
            >
              <div
                class="text-slate-700 leading-relaxed"
                data-testid="react-md"
              >
                <div
                  data-testid="react-markdown-mock"
                >
                  content 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="shrink-0 border-t px-4 py-2.5"
          >
            <p
              class="text-xs text-muted-foreground"
            >
              <span
                class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
              >
                {{platzhalter}}
              </span>
              noch nicht ausgefüllt ·
               
              <span
                class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
              >
                wert
              </span>
              ausgefüllt
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex shrink-0 items-center justify-between gap-2 bg-background px-6 py-4"
    >
      <div
        class="pointer-events-none absolute inset-x-0 -top-8 h-8"
        style="background: linear-gradient(to bottom, transparent, hsl(var(--background)));"
      />
      <span />
      <div
        class="flex items-center gap-2"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-prompt-btn"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span>
            Kopieren
          </span>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            data-slot="dropdown-menu-trigger"
            data-testid="open-in-ai-btn"
            type="button"
          >
            In KI öffnen
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`UsePromptForm rendering tests one field - required true - test 1`] = `
<div>
  <form
    class="flex min-h-0 flex-1 flex-col"
    data-testid="use-prompt-form"
  >
    <div
      class="grid min-h-0 flex-1 grid-cols-1 gap-y-5 px-6 lg:min-h-[40vh] lg:grid-cols-2"
    >
      <div
        class="flex min-h-0 flex-col gap-3 lg:pr-2"
      >
        <span
          class="text-sm font-medium"
        >
          Platzhalter ausfüllen
        </span>
        <div
          class="min-h-0 flex-1 overflow-y-auto rounded-md border p-4"
        >
          <div
            class="space-y-4"
            data-testid="prompt-variables-form"
          >
            <div>
              <div
                data-slot="form-item"
                data-testid="name"
              >
                <label
                  data-error="false"
                  data-slot="form-label"
                  for="_r_1_-form-item"
                >
                  Name
                  <span
                    class="text-destructive"
                  >
                    *
                  </span>
                </label>
                <input
                  aria-describedby="_r_1_-form-item-description"
                  aria-invalid="false"
                  data-slot="form-control"
                  data-testid="input"
                  id="_r_1_-form-item"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex min-h-0 flex-col gap-3 lg:pl-2"
      >
        <span
          class="text-sm font-medium"
        >
          Vorschau
        </span>
        <div
          class="group relative flex min-h-0 flex-1 flex-col overflow-hidden rounded-md border bg-muted/50"
          data-testid="prompt-preview"
        >
          <button
            data-slot="tooltip-trigger"
            data-testid="copy-preview-btn"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-copy"
              data-testid="copy-icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
          </button>
          <div
            data-slot="tooltip-content"
            data-testid="mock-tooltip-content"
            sideoffset="0"
          >
            In Zwischenablage kopieren
          </div>
          <div
            class="flex-1 overflow-y-auto p-4"
          >
            <div
              class="leading-relaxed text-foreground/85"
              data-testid="preview"
            >
              <div
                class="text-slate-700 leading-relaxed"
                data-testid="react-md"
              >
                <div
                  data-testid="react-markdown-mock"
                >
                  content 1
                </div>
              </div>
            </div>
          </div>
          <div
            class="shrink-0 border-t px-4 py-2.5"
          >
            <p
              class="text-xs text-muted-foreground"
            >
              <span
                class="mr-1 inline-block rounded bg-orange-100 px-1 text-orange-700 italic"
              >
                {{platzhalter}}
              </span>
              noch nicht ausgefüllt ·
               
              <span
                class="mr-1 inline-block rounded bg-green-100 px-1 font-medium text-green-800"
              >
                wert
              </span>
              ausgefüllt
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="relative flex shrink-0 items-center justify-between gap-2 bg-background px-6 py-4"
    >
      <div
        class="pointer-events-none absolute inset-x-0 -top-8 h-8"
        style="background: linear-gradient(to bottom, transparent, hsl(var(--background)));"
      />
      <p
        class="text-xs text-muted-foreground"
        data-testid="required-fields-progress"
      >
        0
         von 
        1
         
        Pflichtplatzhalter
         ausgefüllt
      </p>
      <div
        class="flex items-center gap-2"
      >
        <button
          data-slot="tooltip-trigger"
          data-testid="copy-prompt-btn"
          type="submit"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-copy"
            data-testid="copy-icon"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="14"
              rx="2"
              ry="2"
              width="14"
              x="8"
              y="8"
            />
            <path
              d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
            />
          </svg>
          <span>
            Kopieren
          </span>
        </button>
        <div
          data-slot="tooltip-content"
          data-testid="mock-tooltip-content"
          sideoffset="0"
        >
          In Zwischenablage kopieren
        </div>
        <div
          data-slot="dropdown-menu"
          data-testid="mock-react-dropdown-menu-root"
        >
          <button
            data-slot="dropdown-menu-trigger"
            data-testid="open-in-ai-btn"
            type="button"
          >
            In KI öffnen
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-3.5 w-3.5 opacity-70"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
          <div
            data-testid="mock-react-dropdown-menu-portal"
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;
